--- a/Exo06/accueil.html
+++ b/Exo06/accueil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <nav>
         <ul>
-            <li><a href="accueil.html">Accueil</a></li>
+            <li><a href="accueil.html" id="lienAccueil">Accueil</a></li>
             <li><a href="inscription.html">Inscription</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">A propos de</a></li>
@@ -37,14 +37,14 @@
                 grandissante en meubles à cause de l'augmentation de la population, a permis une grande variété de
                 formes, textures et coloris dans les chaises en plastique industrielles.
             </p>
-            <p>
+            <p class="gris">
                 La légèreté des formes amorcée sous la Régence s'accentue encore, entre autres avec l'apparition du
                 dossier concave vers 1730.
                 Les pieds et les traverses comportent de fines moulures et des sculptures asymétriques de plus en plus
                 variées, dans le style rocaille ou en forme de fleurs naturelles. Le pied est bien cambré.
                 On commence à peindre les meubles dans des tons clairs (bleu, blanc et vert clair).
             </p>
-            <p>
+            <p class="gris">
                 Il s'agit le plus souvent d'une sorte de chaise très basse (plus rarement d'un banc) dont l'assise ne
                 sert pas à s'assoir mais à s'agenouiller (agenouilloir) et dont le dossier ne sert pas à s'adosser, mais
                 à s'accouder sur une tablette (accoudoir), à poser son livre de prière (repose-livre) ou à écrire s'il
@@ -83,7 +83,7 @@
                         <td>01/01/2018</td>
                         <td><img src="images/chaise_1.jpg" height="40"></td>
                     </tr>
-                    <tr>
+                    <tr class="orangeBack">
                         <td>Chaise 2</td>
                         <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium totam quaerat
                             distinctio, alias voluptate libero expedita! Commodi, nesciunt culpa molestias voluptatum
