--- a/Exo09/accueil.html
+++ b/Exo09/accueil.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 
     <nav>
         <ul>
-            <li><a href="accueil.html">Accueil</a></li>
+            <li><a href="accueil.html" id="lienAccueil">Accueil</a></li>
             <li><a href="inscription.html">Inscription</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">A propos de</a></li>
@@ -26,8 +27,8 @@
     </nav>
 
     <main>
-        <h2>Description</h2>
         <section>
+            <h2>Description</h2>
             <p>
                 Dans les années 1960, à cause de la Guerre du Pacifique, une pénurie en caoutchouc naturel (jusqu'alors
                 importé des Indes néerlandaises et de la Malaisie) survient en Europe et aux États-Unis. Les fabricants
@@ -37,14 +38,14 @@
                 grandissante en meubles à cause de l'augmentation de la population, a permis une grande variété de
                 formes, textures et coloris dans les chaises en plastique industrielles.
             </p>
-            <p>
+            <p class="gris">
                 La légèreté des formes amorcée sous la Régence s'accentue encore, entre autres avec l'apparition du
                 dossier concave vers 1730.
                 Les pieds et les traverses comportent de fines moulures et des sculptures asymétriques de plus en plus
                 variées, dans le style rocaille ou en forme de fleurs naturelles. Le pied est bien cambré.
                 On commence à peindre les meubles dans des tons clairs (bleu, blanc et vert clair).
             </p>
-            <p>
+            <p class="gris">
                 Il s'agit le plus souvent d'une sorte de chaise très basse (plus rarement d'un banc) dont l'assise ne
                 sert pas à s'assoir mais à s'agenouiller (agenouilloir) et dont le dossier ne sert pas à s'adosser, mais
                 à s'accouder sur une tablette (accoudoir), à poser son livre de prière (repose-livre) ou à écrire s'il
@@ -54,16 +55,17 @@
             </p>
         </section>
 
-        <h2>Gallerie</h2>
+        
         <section>
-            <img src="images/chaise_1.jpg" alt="Photo de chaise" width="300">
-            <img src="images/chaise_2.jpg" alt="Photo de chaise" width="300">
-            <img src="images/chaise_3.jpg" alt="Photo de chaise" width="300">
+            <h2>Gallerie</h2>
+            <img src="images/chaise_1.jpg" alt="Photo de chaise">
+            <img src="images/chaise_2.jpg" alt="Photo de chaise">
+            <img src="images/chaise_3.jpg" alt="Photo de chaise">
         </section>
 
-        <h2>Comparatif</h2>
+        
         <section>
-
+            <h2>Comparatif</h2>
             <table>
                 <thead>
                     <tr>
@@ -81,15 +83,15 @@
                             veniam sed pariatur consectetur dolor velit optio tenetur animi commodi praesentium, magni
                             impedit repudiandae doloremque explicabo delectus inventore.</td>
                         <td>01/01/2018</td>
-                        <td><img src="images/chaise_1.jpg" height="40"></td>
+                        <td><img src="images/chaise_1.jpg"></td>
                     </tr>
-                    <tr>
+                    <tr class="orangeBack">
                         <td>Chaise 2</td>
                         <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium totam quaerat
                             distinctio, alias voluptate libero expedita! Commodi, nesciunt culpa molestias voluptatum
                             quaerat dolorem aliquid adipisci. Maxime, minima iste. Dolores, amet!</td>
                         <td>28/05/1999</td>
-                        <td><img src="images/chaise_4.jpg" height="40"></td>
+                        <td><img src="images/chaise_4.jpg"></td>
                     </tr>
                     <tr>
                         <td>Chaise 3</td>
@@ -97,7 +99,7 @@
                             suscipit asperiores quas ipsam provident necessitatibus. Accusantium, exercitationem placeat
                             harum neque eum quos quia accusamus nobis illo!</td>
                         <td>12/12/2012</td>
-                        <td><img src="images/chaise_5.jpg" height="40"></td>
+                        <td><img src="images/chaise_5.jpg"></td>
                     </tr>
                 </tbody>
             </table>
